--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@nuxtjs/axios": "^5.3.6",
         "ant-design-vue": "^1.1.10",
         "browserslist": "^4.6.3",
+        "cookie-universal-nuxt": "^2.0.16",
         "cross-env": "^5.2.0",
         "dotenv": "^8.0.0",
         "express": "^4.16.4",
