--- a/package.json
+++ b/package.json
@@ -14,15 +14,34 @@
         "@nuxtjs/auth": "^4.7.0",
         "@nuxtjs/axios": "^5.3.6",
         "ant-design-vue": "^1.1.10",
+        "body-parser": "^1.19.0",
         "browserslist": "^4.6.3",
+        "cheerio": "^1.0.0-rc.3",
+        "consola": "latest",
+        "cookie-parser": "^1.4.3",
         "cookie-universal-nuxt": "^2.0.16",
+        "core-config": "file:server/cores/config",
+        "core-model": "file:server/cores/model",
         "cross-env": "^5.2.0",
         "dotenv": "^8.0.0",
         "express": "^4.16.4",
+        "express-jwt": "^5.3.1",
+        "express-session": "^1.16.2",
+        "jsonwebtoken": "latest",
+        "lodash": "latest",
         "moment": "^2.24.0",
+        "mongoose": "^5.6.2",
+        "mongoose-relationship": "^0.1.5",
+        "mongoose-unique-validator": "^2.0.3",
+        "morgan": "^1.9.1",
+        "multer": "^1.4.1",
         "nuxt": "^2.0.0",
-        "vue": "latest",
-        "lodash": "latest"
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
+        "request": "latest",
+        "sharp": "^0.22.1",
+        "slug": "^1.1.0",
+        "vue": "latest"
     },
     "devDependencies": {
         "caniuse-lite": "1.0.30000974",
