--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cookie-universal-nuxt": "^2.0.16",
         "core-config": "file:server/cores/config",
         "core-model": "file:server/cores/model",
+        "cors": "^2.8.5",
         "cross-env": "^5.2.0",
         "dotenv": "^8.0.0",
         "express": "^4.16.4",
